{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 1214,
  "lineage": "c808b5d0-dfd4-ab47-c0de-8ff9fee50d2b",
  "resources": [
    {
      "module": "module.db-security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862989290375:security-group/sg-0e6ff2e8a073a73db",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6ff2e8a073a73db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from public instances.security_group",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from public instances.security_group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Aleidy-us-east-1-dev-db-security",
            "name_prefix": "",
            "owner_id": "862989290375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862989290375:security-group/sg-0724ddbee4c7b521a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0724ddbee4c7b521a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "All traffic on port 22",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0539c2344e5fdcd5f"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Aleidy-us-east-1-dev-ec2security",
            "name_prefix": "",
            "owner_id": "862989290375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.load-balancer-security-group.aws_security_group.security_group",
            "module.vpc.aws_vpc.ale_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-service-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862989290375:security-group/sg-07ecf762947a65140",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ecf762947a65140",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from public instances.security_group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0539c2344e5fdcd5f"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Aleidy-us-east-1-dev-ecsSecurity",
            "name_prefix": "",
            "owner_id": "862989290375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.load-balancer-security-group.aws_security_group.security_group",
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862989290375:security-group/sg-0539c2344e5fdcd5f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0539c2344e5fdcd5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from public instances.security_group",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from public instances.security_group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Aleidy-us-east-1-dev-securityGro",
            "name_prefix": "",
            "owner_id": "862989290375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ale_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:862989290375:loadbalancer/app/Aleidy-us-east-1-dev-loadbalance/4a799f91dcf0baa2",
            "arn_suffix": "app/Aleidy-us-east-1-dev-loadbalance/4a799f91dcf0baa2",
            "dns_name": "Aleidy-us-east-1-dev-loadbalance-1351280189.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:862989290375:loadbalancer/app/Aleidy-us-east-1-dev-loadbalance/4a799f91dcf0baa2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Aleidy-us-east-1-dev-loadbalance",
            "security_groups": [
              "sg-0539c2344e5fdcd5f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-039065fe682436f48"
              },
              {
                "subnet_id": "subnet-0520edbe8c42d9444"
              },
              {
                "subnet_id": "subnet-0ffed411294b85131"
              }
            ],
            "subnets": [
              "subnet-039065fe682436f48",
              "subnet-0520edbe8c42d9444",
              "subnet-0ffed411294b85131"
            ],
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-loadbalancer"
            },
            "vpc_id": "vpc-062aad044e883696e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.load-balancer-security-group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_subnet.public-2",
            "module.vpc.aws_subnet.public-3"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "port-80-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:862989290375:listener/app/Aleidy-us-east-1-dev-loadbalance/4a799f91dcf0baa2/b4949ac9cb838fcd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:862989290375:targetgroup/Aleidy-us-east-1-dev-targetGroup/64d94c72d12db6dc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:862989290375:listener/app/Aleidy-us-east-1-dev-loadbalance/4a799f91dcf0baa2/b4949ac9cb838fcd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:862989290375:loadbalancer/app/Aleidy-us-east-1-dev-loadbalance/4a799f91dcf0baa2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.load-balancer-security-group.aws_security_group.security_group",
            "module.load_balancer.aws_lb.ALB",
            "module.target_group.aws_lb_target_group.My_lb_Ale",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_subnet.public-2",
            "module.vpc.aws_subnet.public-3"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "port-80-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:862989290375:targetgroup/Aleidy-us-east-1-dev-targetGroup/64d94c72d12db6dc",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:862989290375:listener-rule/app/Aleidy-us-east-1-dev-loadbalance/4a799f91dcf0baa2/b4949ac9cb838fcd/28af8faf6cf2ea8e",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "test1.aleidy.kiastests.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:862989290375:listener-rule/app/Aleidy-us-east-1-dev-loadbalance/4a799f91dcf0baa2/b4949ac9cb838fcd/28af8faf6cf2ea8e",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:862989290375:listener/app/Aleidy-us-east-1-dev-loadbalance/4a799f91dcf0baa2/b4949ac9cb838fcd",
            "priority": 99
          },
          "dependencies": [
            "module.load-balancer-security-group.aws_security_group.security_group",
            "module.load_balancer.aws_lb.ALB",
            "module.load_balancer.aws_lb_listener.port-80-traffic",
            "module.target_group.aws_lb_target_group.My_lb_Ale",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_subnet.public-2",
            "module.vpc.aws_subnet.public-3"
          ]
        }
      ]
    },
    {
      "module": "module.target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "My_lb_Ale",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:862989290375:targetgroup/Aleidy-us-east-1-dev-targetGroup/64d94c72d12db6dc",
            "arn_suffix": "targetgroup/Aleidy-us-east-1-dev-targetGroup/64d94c72d12db6dc",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 31,
                "matcher": "200-304",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:862989290375:targetgroup/Aleidy-us-east-1-dev-targetGroup/64d94c72d12db6dc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Aleidy-us-east-1-dev-targetGroup",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.load-balancer-security-group.aws_security_group.security_group",
            "module.load_balancer.aws_lb.ALB",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_subnet.public-2",
            "module.vpc.aws_subnet.public-3",
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-025a1df4073d48ae2",
            "domain": "vpc",
            "id": "eipalloc-02d228c4b95167f2e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-078564ec30d8f53eb",
            "private_dns": "ip-10-200-0-237.ec2.internal",
            "private_ip": "10.200.0.237",
            "public_dns": "ec2-23-20-203-98.compute-1.amazonaws.com",
            "public_ip": "23.20.203.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mainIG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862989290375:internet-gateway/igw-0a74ee62744aa0e7f",
            "id": "igw-0a74ee62744aa0e7f",
            "owner_id": "862989290375",
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-internet-gateway"
            },
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d228c4b95167f2e",
            "id": "nat-0724157888d32b1b7",
            "network_interface_id": "eni-078564ec30d8f53eb",
            "private_ip": "10.200.0.237",
            "public_ip": "23.20.203.98",
            "subnet_id": "subnet-0ffed411294b85131",
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-nat-gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0acbda5df6768b94b",
            "owner_id": "862989290375",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0724157888d32b1b7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-private_route"
            },
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02db69448f2b5533a",
            "owner_id": "862989290375",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a74ee62744aa0e7f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-public_route"
            },
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.mainIG",
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rout_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbe5ce6c0e35a5de",
            "route_table_id": "rtb-0acbda5df6768b94b",
            "subnet_id": "subnet-0512debda61bd6766"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_route_table.private_route",
            "module.vpc.aws_subnet.private_1",
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rout_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbb0e5cdddb93a12",
            "route_table_id": "rtb-0acbda5df6768b94b",
            "subnet_id": "subnet-04746d9359295588e"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_route_table.private_route",
            "module.vpc.aws_subnet.private_2",
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rout_private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049ae4d2ca9068400",
            "route_table_id": "rtb-0acbda5df6768b94b",
            "subnet_id": "subnet-002b03232f00c3ace"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_route_table.private_route",
            "module.vpc.aws_subnet.private_3",
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0872cbd45979e910f",
            "route_table_id": "rtb-02db69448f2b5533a",
            "subnet_id": "subnet-0ffed411294b85131"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.mainIG",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0355b03cb6b6c2fa2",
            "route_table_id": "rtb-02db69448f2b5533a",
            "subnet_id": "subnet-039065fe682436f48"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.mainIG",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public-2",
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00378b484e15098fa",
            "route_table_id": "rtb-02db69448f2b5533a",
            "subnet_id": "subnet-0520edbe8c42d9444"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public-3",
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862989290375:subnet/subnet-0512debda61bd6766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.200.3.0/24",
            "id": "subnet-0512debda61bd6766",
            "map_public_ip_on_launch": false,
            "owner_id": "862989290375",
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-private-subnet"
            },
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862989290375:subnet/subnet-04746d9359295588e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.200.4.0/24",
            "id": "subnet-04746d9359295588e",
            "map_public_ip_on_launch": false,
            "owner_id": "862989290375",
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-private-subnet2"
            },
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862989290375:subnet/subnet-002b03232f00c3ace",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.200.5.0/24",
            "id": "subnet-002b03232f00c3ace",
            "map_public_ip_on_launch": false,
            "owner_id": "862989290375",
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-private-subnet3"
            },
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862989290375:subnet/subnet-0ffed411294b85131",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.200.0.0/24",
            "id": "subnet-0ffed411294b85131",
            "map_public_ip_on_launch": false,
            "owner_id": "862989290375",
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-public-subnet1"
            },
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862989290375:subnet/subnet-039065fe682436f48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.200.1.0/24",
            "id": "subnet-039065fe682436f48",
            "map_public_ip_on_launch": false,
            "owner_id": "862989290375",
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-public-subnet2"
            },
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862989290375:subnet/subnet-0520edbe8c42d9444",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.200.2.0/24",
            "id": "subnet-0520edbe8c42d9444",
            "map_public_ip_on_launch": false,
            "owner_id": "862989290375",
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-public-subnet3"
            },
            "vpc_id": "vpc-062aad044e883696e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ale_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ale_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862989290375:vpc/vpc-062aad044e883696e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-08282e1c04805bd13",
            "default_route_table_id": "rtb-08a8be1f89cb27e37",
            "default_security_group_id": "sg-01ec034c7a7cd9113",
            "dhcp_options_id": "dopt-7f2a4e05",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-062aad044e883696e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08a8be1f89cb27e37",
            "owner_id": "862989290375",
            "tags": {
              "Deployment_Method": "terraform",
              "name": "Aleidy-us-east-1-dev-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}